@@ -91,6 +91,7 @@ void shoes_app_style(shoes_app *, VALUE, VALUE);
 VALUE shoes_app_location(VALUE);
 VALUE shoes_app_is_started(VALUE);
 VALUE shoes_app_quit(VALUE);
+VALUE shoes_app_resize_window(VALUE, VALUE, VALUE);
 
 // global var for console up and running
 extern int shoes_global_terminal;
