@@ -788,6 +788,7 @@ void shoes_ruby_init() {
     rb_define_method(cApp, "started?", CASTHOOK(shoes_app_is_started), 0);
     rb_define_method(cApp, "width", CASTHOOK(shoes_app_get_width), 0);
     rb_define_method(cApp, "height", CASTHOOK(shoes_app_get_height), 0);
+    rb_define_method(cApp, "resize", CASTHOOK(shoes_app_resize_window), 2);
     rb_define_method(cApp, "slot", CASTHOOK(shoes_app_slot), 0);
     rb_define_method(cApp, "set_window_icon_path", CASTHOOK(shoes_app_set_icon), 1); // New in 3.2.19
     rb_define_method(cApp, "set_window_title", CASTHOOK(shoes_app_set_wtitle), 1); // New in 3.2.19
