@@ -23,6 +23,8 @@
     to use it. When net/http and open_uri is too confusing, arcane and limiting. 
     On Windows it's not faster (or slower) - just better in other ways. 
     see https://github.com/typhoeus/typhoeus
+  * Method app.resize can progromaticly expand the window.
+    see https://github.com/Shoes3/shoes3/issues/370
   
 === Fixed with 3.3.4
   * When Shoes is installed on a system with existing rvm/rbenv it
@@ -36,7 +38,7 @@
   * rake does a better job of dealing with changes in lib/shoes/*.rb, static/manual-en.txt
     and changes in samples/*/*.rb. You can change these without a full rebuild.
     https://github.com/Shoes3/shoes3/issues/362
-  * new freebsd target
+  * new freebsd target (loose and tight shoes)
     
 -------------- Shoes 3.3.3 ---------------------------------
 
